Solve dependency issues

--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
         "typings":"typings"
     },
     "dependencies": {
-        "angular2": "latest",
+        "@angular/common":  "2.0.0-rc.1",
+        "@angular/compiler":  "2.0.0-rc.1",
+        "@angular/core":  "2.0.0-rc.1",
+        "@angular/http":  "2.0.0-rc.1",
+        "@angular/platform-browser":  "2.0.0-rc.1",
+        "@angular/platform-browser-dynamic":  "2.0.0-rc.1",
+        "@angular/router":  "2.0.0-rc.1",
+        "@angular/router-deprecated":  "2.0.0-rc.1",
+        "@angular/upgrade":  "2.0.0-rc.1",
         "systemjs": "latest",
         "es6-promise":"latest",
-        "rxjs": "latest",
+        "rxjs": "^5.0.0-beta.6",
         "bootstrap": "latest",
         "jquery":"latest",
         "font-awesome":"latest",
         "ng2-bootstrap":"latest",
         "moment":"latest",
-	"es6-shim":"^0.33.3",
-	"reflect-metadata":"^0.1.3",
+	"es6-shim":"^0.35.0",
+	"reflect-metadata":"0.1.2",
 	"zone.js":"^0.6.2"
     },
     "devDependencies": {
