--- a/package.json
+++ b/package.json
@@ -11,27 +11,30 @@
         "typings":"typings"
     },
     "dependencies": {
-        "@angular/common":"latest",
-        "@angular/compiler":"latest",
-        "@angular/core":"latest",
-        "@angular/http":"latest",
-        "@angular/platform-browser":"latest",
-        "@angular/platform-browser-dynamic":"latest",
-        "@angular/router":"latest",
-        "@angular/router-deprecated":"latest",
-        "@angular/testing":"latest",
-        "@angular/upgrade":"latest",
-        "systemjs": "latest",
+        "@angular/common":"2.0.0-rc.1",
+        "@angular/compiler":"2.0.0-rc.1",
+        "@angular/core":"2.0.0-rc.1",
+        "@angular/http":"2.0.0-rc.1",
+        "@angular/platform-browser":"2.0.0-rc.1",
+        "@angular/platform-browser-dynamic":"2.0.0-rc.1",
+        "@angular/router":"2.0.0-rc.1",
+        "@angular/router-deprecated":"2.0.0-rc.1",
+
         "es6-promise":"latest",
-        "rxjs": "latest",
-        "bootstrap": "latest",
         "jquery":"latest",
         "font-awesome":"latest",
         "ng2-bootstrap":"latest",
         "moment":"latest",
-    	"es6-shim":"latest",
-	    "reflect-metadata":"latest",
-	    "zone.js":"latest"
+       
+        "systemjs": "0.19.27",
+        "es6-shim": "^0.35.0",
+        "reflect-metadata": "^0.1.3",
+        "rxjs": "5.0.0-beta.6",
+        "zone.js": "^0.6.12",
+
+        "angular2-in-memory-web-api": "0.0.7",
+        "bootstrap": "^3.3.6"
+        
     },
     "devDependencies": {
         "gulp": "latest",
