--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
-    "compilerOptions":{
-        "target":"es5",
-        "module":"system",                 
-        "moduleResolution": "node",        
-        "sourceMap":true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators":true,
-        "removeComments": true,
-        "noImplicitAny": false,
-        "preserveConstEnums":false,
-        "rootDir":"./src"   
-    },
-    "exclude":["node_modules","typings/main","typings/main.d.ts"]
-    
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": true,
+    "noImplicitAny": false, 
+    "suppressImplicitAnyIndexErrors":true
+  },
+  "exclude": [
+    "node_modules",
+    "typings/main",
+    "typings/main.d.ts"
+//    ,"dist/vendor"
+  ]
 }
-
