--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "name": "match-helper",
+  "name": "match-tool",
+  "productName": "MatchTool",
+  "author": "Broad Institute",
+  "productDescription": "Desktop app to test ontologies build and match",
+  "description": "Desktop app to test ontologies build and match",
+  "maintainer": "Broad Institute.",
   "version": "0.0.0",
   "main": "main.js",
   "scripts": {
@@ -27,21 +32,25 @@
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
     "electron": "^2.0.4",
+    "electron-squirrel-startup": "^1.0.0",
     "primeicons": "^1.0.0-beta.9",
     "primeng": "^6.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.0",
     "@angular-devkit/build-angular": "~0.6.1",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.1",
+    "@angular/compiler-cli": "^6.0.0",
     "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "electron-builder": "^20.20.4",
+    "electron-installer-dmg": "^2.0.0",
+    "electron-packager": "^12.1.0",
+    "electron-winstaller": "^2.6.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -51,6 +60,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
