--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "clean": "rm -rf ./dist/",
+    "build:travisci": "ng build --target production --aot --build-optimizer --vendor-chunk --extract-css --output-hashing all --deploy-url /match-tool/ --base-href /match-tool",
+    "ci": "npm run clean && ng lint && ng test --browser ChromeTravisCi --single-run --reporters spec --sourcemaps=false && npm run build:travisci",
     "electron": "ng build --base-href ./ && electron .",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,8 +34,6 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
-    "electron": "^2.0.4",
-    "electron-squirrel-startup": "^1.0.0",
     "primeicons": "^1.0.0-beta.9",
     "primeng": "^6.0.0",
     "rxjs": "^6.0.0",
@@ -47,6 +48,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "electron": "^2.0.4",
+    "electron-squirrel-startup": "^1.0.0",
     "electron-builder": "^20.20.4",
     "electron-installer-dmg": "^2.0.0",
     "electron-packager": "^12.1.0",
